<resources>
    <string name="app_name">Banregio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_number">Número de la tarjeta</string>
    <string name="bank">Banco</string>
    <string name="card_owner">Titular de la tarjeta</string>
    <string name="expiration_date">Fecha de expiración</string>
    <string name="cvv">CVV</string>
</resources>